--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,59 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Montserrat', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
+    font-size: 16px;
+    padding: 20px 100px 0px 100px;
+    background: #f3f3f3;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+    font-family: 'Montserrat', sans-serif;
+    text-decoration: none;
+    color: #525252;
+  
+}
+
+a:hover {
+  color: #4b88ab;
+}
+
+ul {
+  list-style-type: none;
+}
+
+
+#content {
+    margin: auto;
+    width: 100%;
+    max-width: 500px;
+    height: 100px;
+}
+
+.header {
+  margin: auto;
+}
+
+img {
+  margin: 1em;
+  margin-bottom: .5em;
+  float: center;
+}
+
+#navbar {
+  width: 100%;
+  margin: none;
+}
+
+footer {
+  height: 3em;
 }
